--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
         "sass": "^1.56.1",
         "tailwindcss": "^4.0.0",
         "vite": "^6.2.4"
+    },
+    "dependencies": {
+        "sweetalert2": "^11.22.0"
     }
 }
